<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_game"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="0"
                android:background="@drawable/layout_bg"
                android:contentDescription="@string/quiz_image"
                android:cropToPadding="true"
                android:layout_marginBottom="12dp"
                android:radius="20dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/question"
                android:textColor="@color/question"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/layout_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/timer"
            android:textAlignment="center"
            android:textColor="@color/text_gray"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressTint="#8BC34A" />

        <Button
            android:id="@+id/option1"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/unchecked"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/option1"
            android:textAlignment="viewStart"
            android:textColor="@color/text_gray"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            app:strokeColor="@color/gray"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/option2"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:drawableEnd="@drawable/unchecked"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/option2"
            android:textAlignment="viewStart"
            android:textColor="@color/text_gray"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            app:strokeColor="@color/gray"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/option3"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:drawableEnd="@drawable/unchecked"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/option3"
            android:textAlignment="viewStart"
            android:textColor="@color/text_gray"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            app:strokeColor="@color/gray"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/option4"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:drawableEnd="@drawable/unchecked"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/option4"
            android:textAlignment="viewStart"
            android:textColor="@color/text_gray"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            app:strokeColor="@color/gray"
            app:strokeWidth="2dp" />


    </LinearLayout>

</LinearLayout>
